fix: make HTML body 100% of the browser height

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,11 @@
   </head>
   <style>
     #root {
-      width:100vw;
-      height:100vh;
+      position:absolute;
+      top:0;
+      left:0;
+      height:100%;
+      width:100%;
       display: flex;
     }
   </style>
